# gitlab-to-github-migrator

./: .envrc  .gitignore  AGENTS.md  LICENSE  README.md  gitlab-to-github-migration-spec.md  gitlab_to_github_migrator.py  main.py  pyproject.toml  test_gitlab_to_github_migrator.py  test_integration_real.py
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml  copilot-setup-steps.yml  lint.yml  test-integration.yml  test-unit.yml
ai/features/owner-for-cleanup/: architecture.md  feature.md  plan.md  research_notes.md
docs/plans/: 2026-01-31-migrator-restructure-design.md  2026-01-31-migrator-restructure-impl.md  2026-02-02-72-source-system-protocol-design.md  2026-02-02-ci-workflows-design.md
scripts/: create_gitlab_test_project.py
src/: explore.ipynb
src/gitlab_to_github_migrator/: __init__.py  attachments.py  cleanup_test_repos.py  cli.py  create_gitlab_test_project.py  delete_test_repos.py  exceptions.py  git_migration.py  git_utils.py  github_utils.py  gitlab_utils.py  issue_builder.py  label_translator.py  labels.py  migrator.py  models.py  orchestrator.py  protocols.py  relationships.py  utils.py
tests/: __init__.py  conftest.py  test_attachments.py  test_cli.py  test_env_var_validation.py  test_git_migration.py  test_git_utils.py  test_github_utils.py  test_gitlab_to_github_migrator.py  test_gitlab_utils.py  test_integration_real.py  test_issue_builder.py  test_labels.py  test_relationships.py  test_utility_scripts.py  test_warning_detection.py
